--- a/public/projects.html
+++ b/public/projects.html
@@ -51,7 +51,7 @@
 					<h2>fox news digital</h2>
 				</header>
 				<figure class="project-screenshot">
-					<img src="img/projects/example.png">
+					<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/example.png">
 					<figcaption class="contain">
 						<h3 class="headline">Reality Reimagined</h3>
 						<p class="tags">2011<span></span>Web<span></span>Flash</p>
@@ -66,18 +66,18 @@
 					</header>
 					<div class="grid-screenshot grid">
 						<div class="first-child" id="gridAnim">
-							<img src="img/projects/fx.jpg" class="fx" style="z-index:2;">
-							<img src="img/projects/ex6.jpg" class="fx" style="z-index:1;">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx.jpg" class="fx" style="z-index:2;">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex6.jpg" class="fx" style="z-index:1;">
 						</div>
 						<div id="gridAnim1">
-							<img src="img/projects/ex1.jpg" class="fx" style="z-index:3;">
-							<img src="img/projects/ex2.jpg" class="fx" style="z-index:2;">
-							<img src="img/projects/ex3.jpg" class="fx" style="z-index:1;">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx" style="z-index:3;">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx" style="z-index:2;">
+							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx" style="z-index:1;">
 						</div>
 						<div id="gridAnim2">
-<img src="img/projects/ex2.jpg" class="fx" style="z-index:3;">
-<img src="img/projects/ex1.jpg" class="fx" style="z-index:2;">
-<img src="img/projects/ex3.jpg" class="fx" style="z-index:1;">							
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx" style="z-index:3;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx" style="z-index:2;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx" style="z-index:1;">							
 						</div>
 						<aside>
 							<div>
@@ -86,13 +86,13 @@
 							
 						</aside>
 						<div id="gridAnim3">
-<img src="img/projects/ex1.jpg" class="fx" style="z-index:3;">
-<img src="img/projects/ex2.jpg" class="fx" style="z-index:2;">
-<img src="img/projects/ex3.jpg" class="fx" style="z-index:1;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx" style="z-index:3;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx" style="z-index:2;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx" style="z-index:1;">
 						</div>
 						<div class="last-child" id="lastGrid">
-<img src="img/projects/fx.jpg" class="fx" style="z-index:2;">
-<img src="img/projects/ex6.jpg" class="fx" style="z-index:1;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx.jpg" class="fx" style="z-index:2;">
+<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex6.jpg" class="fx" style="z-index:1;">
 						</div>
 					</div>
 					<footer class="section-footer">
@@ -152,7 +152,7 @@
 													motion</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -162,7 +162,7 @@
 												<p class="ch0 fx">SAP</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex3.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -172,7 +172,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex4.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex4.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -182,7 +182,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex1.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -192,7 +192,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex5.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex5.jpg" class="fx">
 										</figure>
 									</a>
 								</li>
@@ -203,7 +203,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex3.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -213,7 +213,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex1.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -223,7 +223,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -233,7 +233,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex5.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex5.jpg" class="fx">
 										</figure>
 									</a>						
 				                </li><li>
@@ -243,7 +243,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex4.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex4.jpg" class="fx">
 										</figure>
 									</a>
 								</li><li>
@@ -253,7 +253,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -263,7 +263,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -273,7 +273,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/ex3.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -283,7 +283,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>						
 				                </li><li>
@@ -293,7 +293,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 								</li><li>
@@ -303,7 +303,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -313,7 +313,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -323,7 +323,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -333,7 +333,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>						
 				                </li><li>
@@ -343,7 +343,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 								</li><li>
@@ -353,7 +353,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -363,7 +363,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -373,7 +373,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 				                </li><li>
@@ -383,7 +383,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>						
 				                </li><li>
@@ -393,7 +393,7 @@
 												<p class="ch0 fx">Office<br>Depot</p>
 												<div class="fx-hover"></div>
 											</figcaption>
-											<img src="img/projects/fx2.jpg" class="fx">
+											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
 										</figure>
 									</a>
 								</li>	
@@ -420,18 +420,16 @@
 		</footer>			
 	</div>
 
+<!-- Dynamically Insert Bower Dependencies -->
+<!-- bower:js -->
+<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular.min.js.gzip"></script>
 
-<script type="text/javascript" src="js/dom-utils.js"></script>
-<script type="text/javascript" src="js/scroll-utils.js"></script>
-<script type="text/javascript" src="js/projects.js"></script>
+<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular-route.min.js"></script>
 
-<script type="text/javascript">
-//var test = document.getElementById('gridanim1');
-// var test2 = document.getElementById('works');
+<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular-resource.min.js"></script>
+<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/projects-adriansan-ui.min.js"></script>
+<!-- endbower -->
 
-// <!-- <a href="mailto:adrian@adrian-s.com?subject=Hello There!&amp;body=Hi Adrian, so I was looking at your portfolio and...">Contact</a> -->
- 
-</script>
 </body>
 </html>
 
