Dynamic injection of a <script> tag from a Grunt task

--- a/public/index.html
+++ b/public/index.html
@@ -280,8 +280,8 @@
 			</div>
 		</footer>			
 	</div>
-
 <!-- adrian:js -->
+<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/main-adriansan-ui.min.js"></script>
 <!-- endadrian -->	
 <script type="text/javascript">
 	window.onload = function() {
@@ -303,6 +303,36 @@
 </script>
 </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
