[IE FIX]: Fix grid animation event handlers.

--- a/public/adrian.html
+++ b/public/adrian.html
@@ -49,6 +49,9 @@
 				<article id="works" class="subsection">
 					<div class="container">
 						<input type="text" id="js-search" name="search" class="search" placeholder="Filter all works">
+<div ng-controller="ProjectListCtrl">
+{{projects}}
+</div>							
 						<div class="grid"> <!-- add here -->
 							<ul class="clearfix">
 				                <li>
