--- a/public/index.html
+++ b/public/index.html
@@ -281,7 +281,12 @@
 		</footer>			
 	</div>
 <!-- adrian:js -->
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/main-adriansan-ui.min.js"></script>
+<script type="text/javascript" src="js/dom-utils.js"></script>
+<script type="text/javascript" src="js/scroll-utils.js"></script>
+<script type="text/javascript" src="js/gridanim.js"></script>
+<script type="text/javascript" src="js/scenes.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
+
 <!-- endadrian -->	
 <script type="text/javascript">
 	window.onload = function() {
@@ -302,6 +307,7 @@
 </script>
 </body>
 </html>
+
 
 
 
