[SAFARI FIX]: Updated CSS3 Animations for webkit

--- a/public/adrian.html
+++ b/public/adrian.html
@@ -337,7 +337,12 @@
 <script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular-route.min.js"></script>
 
 <script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular-resource.min.js"></script>
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/projects-adriansan-ui.min.js"></script>
+
+<script type="text/javascript" src="js/dom-utils.js"></script>
+<script type="text/javascript" src="js/scroll-utils.js"></script>
+<script type="text/javascript" src="js/projects.js"></script>
+
+
 <script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/ng-adriansan-ui.min.js"></script>
 <!-- endbower -->
 
