[ANGULAR]: Custom directive for the Projects List Service

--- a/public/adrian.html
+++ b/public/adrian.html
@@ -43,271 +43,17 @@
 	<div id="main-wrapper">
 		<main role="main"> 
 			<section id="about">
-				
+				<!-- Details Section -->
 				<div ng-view ng-cloak></div>
 
 				<article id="works" class="subsection">
-					<div class="container">
-						<input type="text" id="js-search" name="search" class="search" placeholder="Filter all works">
-
-						<div class="grid" ng-controller="ProjectListCtrl"> <!-- add here -->
-							<!-- <ul class="clearfix">  -->
-								<worksList info="projects"></worksList>
-				                <!-- <li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Scroll
-													motion</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li> --> 
-				                <!-- <li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">SAP</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex4.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex5.jpg" class="fx">
-										</figure>
-									</a>
-								</li>
-				                <li>
-									<a href="#" class="project fx">				
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex1.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex5.jpg" class="fx">
-										</figure>
-									</a>						
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex4.jpg" class="fx">
-										</figure>
-									</a>
-								</li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/ex3.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>						
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-								</li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>						
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-								</li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>						
-				                </li><li>
-									<a href="#" class="project fx">						
-										<figure>
-											<figcaption>
-												<p class="ch0 fx">Office<br>Depot</p>
-												<div class="fx-hover"></div>
-											</figcaption>
-											<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/projects/fx2.jpg" class="fx">
-										</figure>
-									</a>
-								</li> -->	
-					        <!-- </ul> -->						
+					<div class="container" ng-controller="ProjectListCtrl">
+						<input type="text" ng-model="company" id="js-search" name="search" class="search" placeholder="Filter all works">
+						<div class="grid">
+							<ul class="clearfix">
+								<!-- Custom Angular Directive -->
+								<works-list ng-repeat="project in projects | filter:company" info="project"></works-list>
+							</ul>
 						</div> 
 					</div>
 				</article>
