--- a/public/adrian.html
+++ b/public/adrian.html
@@ -78,13 +78,13 @@
 
 <!-- Dynamically Insert Project Dependencies --> 
 <!-- bower:js -->
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular.min.js"></script>
+<script src="tmp/js/vendor/angular.js"></script>
 
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular-route.min.js"></script>
+<script src="tmp/js/vendor/angular-route.js"></script>
 
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/vendor/angular-resource.min.js"></script>
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/projects-adriansan-ui.min.js"></script>
-<script src="http://adriancom.s3-website-us-west-2.amazonaws.com/js/ng-adriansan-ui.min.js"></script>
+<script src="tmp/js/vendor/angular-resource.js"></script>
+<script src="tmp/js/projects-adriansan-ui.min.js"></script>
+<script src="tmp/js/ng-adriansan-ui.min.js"></script>
 <!-- endbower -->
 
 </body>
