Updated filter results. UI updates.

--- a/public/adrian.html
+++ b/public/adrian.html
@@ -48,7 +48,7 @@
 
 				<article id="works" class="subsection">
 					<div class="container" ng-controller="ProjectListCtrl">
-						<input type="text" ng-model="company" id="js-search" name="search" class="search" placeholder="Filter all works">
+						<input type="text" ng-model="company" id="js-search" name="search" class="search" placeholder="&#128269; Filter all works">
 						<div class="grid">
 							<ul class="clearfix">
 								<!-- Custom Angular Directive -->
