Updated main content. Adjusted CSS styles

--- a/public/index.html
+++ b/public/index.html
@@ -66,19 +66,19 @@
 		        </nav>
 			</div>
 		</div>
-	</header>
+	</header> 
 	<div id="grid-menu" class="menu noshow" style="display:none;">
 		<div class="home-hide menu-wrapper">
 			<div id="grid-nav"></div>
 		</div>
-	</div>
+	</div> 
 	<div id="js-main-cover" class="cover fx"></div>
 	<div id="main-wrapper" class="home-hide">				
 		<main role="main"> 
 			<section id="splash">
-				<h1 class="splash-head">Lorem Ipsum<br>Dolor sit amet</h1>
+				<h1 class="splash-head">Creating Experiences<br> People Enjoy</h1>
 				<p class="divider-line"><span></span>
-					<h3>Some cool crap will go in this area. I have to fill this with information about me. This area will rock.</h3>
+					<h3>Combining creative design and clever coding to transform ideas into breakthrough solutions to make people’s web experiences better.</h3>
 				</p>
 				<div class="contain">
 					<button id="js-cta" class="btn btn-cta">Explore my work</button>
@@ -148,43 +148,43 @@
 				<h2>To Code is Beautiful, to Design is Divine</h2>
 				<header id="about-what">
 					<div class="contain">
-						<p>I’m a designer at Google, where I work with a talented team of technologists to connect people and cultures across the world. Previously, I was a designer at Huge, where I helped brands such as Samsung, Vans, and TED design new products to meet people’s evolving digital lifestyles.</p>
-						<p>I’m a designer at Google, where I work with a talented team of technologists to connect people and cultures across the world. Previously, I was a designer at Huge, where I helped brands such as Samsung, Vans, and TED design new products to meet people’s evolving digital lifestyles.</p>
+						<p>I am a creative designer and brilliant technologist with a passion for problem solving and helping innovative organizations establish their business strategies in this digital world. From eye-pleasing visual designs and content-rich, high-traffic websites to enterprise level CMS development, no challenge is too great. I enjoy collaborating with talented teams of digital gurus to fuse design and technology into memorable experiences that users love and share.</p>
+
 					</div>
 				</header>
 				<div id="about-how">
 					<header>
 						<h1>how i do it</h1>
-						<p>maybe something here</p>
+						<p>Making technology simple, fun and clear is the name of my game.</p>
 					</header>
 					<div class="contain">
 						<article class="fx">
 							<span class="icon-books"></span>
 							<svg>
 								<text text-anchor="middle" x="80" y="15"  fill="url(#gradient)">Research</text>
-							</svg>
-							<p>Our team works hard to create beautiful rider and driver partner apps that are effortless to use.</p>
+							</svg> 
+							<p>With a deeply rooted focus on the problem, game-changing ideas are revealed, opportunities identified and relentless creativity is kick-started.</p>
 						</article>
 						<article class="fx">
 							<span class="icon-display"></span>
 							<svg>
 								<text text-anchor="middle" x="80" y="15" fill="url(#gradient)">Design</text>
 							</svg>							
-							<p>Our team works hard to create beautiful rider and driver partner apps that are effortless to use.</p>
+							<p>Coupled with UX design principles, iterative prototyping and end-user perspectives, an elegant and friendly visual interface is born.</p>
 						</article>
 						<article class="fx">
 							<span class="icon-cogs"></span>
 							<svg>
 								<text text-anchor="middle" x="80" y="15" fill="url(#gradient)">Develop</text>
 							</svg>							
-							<p>Our team works hard to create beautiful rider and driver partner apps that are effortless to use.</p>
+							<p>Design continuity evolves and technology is embraced. Platform agnostic solutions are formed from optimal and beautiful code.</p>
 						</article>
 						<article class="fx">
 							<span class="icon-meter"></span>							
 							<svg>
 								<text text-anchor="middle" x="80" y="15" fill="url(#gradient)">Refine</text>
 							</svg>							
-							<p>Our team works hard to create beautiful rider and driver partner apps that are effortless to use.</p>
+							<p>Future proofing and diligent optimization is harmonized. Innovation is produced and a well-rounded product is successfully launched.</p>
 						</article>
 					</div>
 				</div>
@@ -199,10 +199,10 @@
 						<figure>
 							<figcaption>
 								<p class="ch0 fx"> Hurricane Interactive</p>
-								<p class="ch1 fx">Client - Fox Business</p>
+								<p class="ch1 fx">Client - Fox News Digital</p>
 								<div class="fx-hover"></div>
 							</figcaption>
-							<img src="http://adriancom.s3-website-us-west-2.amazonaws.com/img/pic.jpg" class="fx">
+							<img src="assets/img/featured-hurricane.jpg" class="fx">
 						</figure>
 					</a>
 					<a href="#" class="project">
@@ -300,6 +300,7 @@
 </script>
 </body>
 </html>
+
 
 
 
